--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-termynal",
-  "version": "0.0.1b",
-  "description": "A react wrapper, with slight modifications, of termynal js.",
+  "version": "0.0.1c",
+  "description": "A react wrapper around termynal js.",
   "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -48,7 +48,6 @@
     "babel-loader": "^8.2.3",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.0",
     "rollup-plugin-dts": "^4.2.0",
@@ -58,6 +57,9 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.6.2"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   },
   "module": "dist/esm/index.js",
   "files": [
