--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true,
-    "allowJs": true
+    "allowJs": true,
     },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
